--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
 </header>
 <main>
 	<div id="banner">
+
+		<img class=" arrow arrow_left" src="./assets/images/arrow_left.png" alt="arrow_left">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-			<img class=" arrow arrow_left" src="./assets/images/arrow_left.png" alt="arrow_left">
-			<img class=" arrow arrow_right" src="./assets/images/arrow_right.png" alt="arrow_right">
+		<img class=" arrow arrow_right" src="./assets/images/arrow_right.png" alt="arrow_right">
 
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>	
 	
-		</div>
 		<div class="dots">
-		</div>
+			<div class="dot dot_selected"> </div>
+				<div class="dot"> </div>
+					<div class="dot"> </div>
+						<div class="dot"> </div>
 	</div>
+</div>
 	<section id="about-us" class="container">
 		<div>
 			<h2>Qui sommes-nous ?</h2>
